--- a/alta_deposito.html
+++ b/alta_deposito.html
@@ -73,27 +73,111 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <label>Producto</label>
-                                                    <input type="text" class="form-control" id="buscarProducto" placeholder="Buscar producto...">
+                                                    <label>Buscar Producto (por código o nombre)</label>
+                                                    <div class="input-group">
+                                                        <input type="text" class="form-control" id="buscarProducto" placeholder="Ingrese código o nombre del producto...">
+                                                        <div class="input-group-append">
+                                                            <button class="btn btn-outline-secondary" type="button" id="limpiarBusqueda">
+                                                                <i class="fas fa-times"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div id="productoSeleccionado" class="mt-4" style="display: none;">
+                                            <div class="card">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Producto Seleccionado</h5>
+                                                    <div class="row">
+                                                        <div class="col-md-3">
+                                                            <div class="form-group">
+                                                                <label>Código</label>
+                                                                <input type="text" class="form-control" id="codigoProducto" readonly>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-5">
+                                                            <div class="form-group">
+                                                                <label>Descripción</label>
+                                                                <input type="text" class="form-control" id="descripcionProducto" readonly>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-2">
+                                                            <div class="form-group">
+                                                                <label>Cantidad</label>
+                                                                <input type="number" class="form-control" id="cantidadProducto" min="1" value="1">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-2">
+                                                            <div class="form-group">
+                                                                <label>Peso (kg)</label>
+                                                                <input type="number" class="form-control" id="pesoProducto" min="0" step="0.001" value="0">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row mt-3">
+                                                        <div class="col-12">
+                                                            <button type="button" class="btn btn-primary" id="btnGuardar">
+                                                                <i class="fas fa-save"></i> Guardar
+                                                            </button>
+                                                            <button type="button" class="btn btn-secondary" id="btnCancelar">
+                                                                <i class="fas fa-times"></i> Cancelar
+                                                            </button>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </form>
 
-                                    <div class="table-responsive mt-4">
-                                        <table class="table table-bordered">
-                                            <thead>
-                                                <tr>
-                                                    <th>Código</th>
-                                                    <th>Descripción</th>
-                                                    <th>Cantidad</th>
-                                                    <th>Peso</th>
-                                                    <th>Acciones</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="itemsTable">
-                                            </tbody>
-                                        </table>
+                                    <div id="resultadosBusqueda" class="mt-4" style="display: none;">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h3 class="card-title">Resultados de la búsqueda</h3>
+                                            </div>
+                                            <div class="card-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-bordered table-hover">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Código</th>
+                                                                <th>Descripción</th>
+                                                                <th>Acciones</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody id="resultadosTable">
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Registros del día -->
+                                    <div class="mt-4">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h3 class="card-title">Registros del día</h3>
+                                            </div>
+                                            <div class="card-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-bordered table-hover">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Hora</th>
+                                                                <th>Código</th>
+                                                                <th>Descripción</th>
+                                                                <th>Cantidad</th>
+                                                                <th>Peso</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody id="registrosDiaTable">
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -106,6 +190,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/alta_deposito.js"></script>
 </body>
 </html>
