--- a/alta_deposito.html
+++ b/alta_deposito.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alta de Productos - Depósito Central</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/logo-1681247675350.png">
+    <link rel="shortcut icon" type="image/png" href="img/logo-1681247675350.png">
+    <!-- Agregar diferentes tamaños para mejor compatibilidad -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo-1681247675350.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo-1681247675350.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo-1681247675350.png">
+    <!-- Estilos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
@@ -17,13 +26,14 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
             </ul>
+            
         </nav>
 
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <a href="index.html" class="brand-link">
                 <img src="img/logo-1681247675350.png" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">Heladería</span>
+                <span class="brand-text font-weight-light">J . A . R . V . I . S</span>
             </a>
 
             <div class="sidebar">
@@ -77,9 +87,28 @@
                                                     <div class="input-group">
                                                         <input type="text" class="form-control" id="buscarProducto" placeholder="Ingrese código o nombre del producto...">
                                                         <div class="input-group-append">
-                                                            <button class="btn btn-outline-secondary" type="button" id="limpiarBusqueda">
+                                                            <button class="btn btn-secondary" type="button" id="limpiarBusqueda">
                                                                 <i class="fas fa-times"></i>
                                                             </button>
+                                                            <button class="btn btn-primary" type="button" id="btnEscanearQR" title="Escanear código de barras">
+                                                                <i class="fas fa-barcode"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                    <!-- Modal para el escáner de códigos -->
+                                                    <div class="modal fade" id="qrModal" tabindex="-1" role="dialog" aria-labelledby="qrModalLabel" aria-hidden="true">
+                                                        <div class="modal-dialog" role="document">
+                                                            <div class="modal-content">
+                                                                <div class="modal-header">
+                                                                    <h5 class="modal-title" id="qrModalLabel">Escanear Código de Barras</h5>
+                                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                        <span aria-hidden="true">&times;</span>
+                                                                    </button>
+                                                                </div>
+                                                                <div class="modal-body">
+                                                                    <div id="qr-reader" style="width: 100%"></div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -191,6 +220,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html5-qrcode/html5-qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="js/alta_deposito.js"></script>
 </body>
 </html>
