--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control de Stock</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/logo-1681247675350.png">
+    <link rel="shortcut icon" type="image/png" href="img/logo-1681247675350.png">
+    <!-- Agregar diferentes tamaños para mejor compatibilidad -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo-1681247675350.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo-1681247675350.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo-1681247675350.png">
+    <!-- Estilos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light" >
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
             </ul>
+           
         </nav>
 
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <a href="index.html" class="brand-link">
                 <img src="img/logo-1681247675350.png" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">Heladería</span>
+                <span class="brand-text font-weight-light">  J . A . R . V . I . S</span>
             </a>
 
             <div class="sidebar">
@@ -139,6 +149,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
+
     <script src="js/index.js"></script>
 </body>
 </html>
